Fixed overlapping text problem

--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -259,7 +259,7 @@ hr {
   position: relative;
   word-wrap: break-word;
   height: 150%;
-  padding: 0 5%;
+  padding: 0 7%;
   display: flex;
   flex-direction: column;
   align-content: space-around;
@@ -277,10 +277,10 @@ hr {
     font-weight: medium;
     text-align: center;
     flex-basis: 70%;
-  }
 
-  @media screen and (max-width: $medium-breakpoint) {
-    @include font-size(14px);
+    @media screen and (max-width: $large-breakpoint) {
+      @include font-size(14px);
+    }
   }
 }
 /*
